--- a/package.json
+++ b/package.json
@@ -251,7 +251,7 @@
     "webdriver-manager": "^12.1.7"
   },
   "engines": {
-    "node": "12 - 15"
+    "node": "15.14.x"
   },
   "os": [
     "win32",
