[CP/VL] Increase disk_quota. Remove test task

--- a/manifest.yml
+++ b/manifest.yml
@@ -10,3 +10,4 @@ applications:
   routes:
   - route: juice-shop-waf-test.springernature.app
   - route: juice-shop-waf-test.public.springernature.app
+  disk_quota: 2G
