--- a/package.json
+++ b/package.json
@@ -57,17 +57,17 @@
     "e2e": "ts-node test/e2eTests.ts",
     "frisby": "nyc --report-dir=./build/reports/coverage/api-tests jest --silent --runInBand --forceExit",
     "postinstall": "cd frontend && npm install --legacy-peer-deps && cd .. && npm run build:frontend && (npm run --silent build:server || cd .)",
-    "lint": "eslint *.[jt]s data lib models routes test views && cd frontend && ng lint && npx stylelint \"**/*.scss\" && cd ..",
+    "lint": "eslint *.[jt]s data lib models routes test views && cd frontend && ./node_modules/@angular/cli/bin/ng lint && npx stylelint \"**/*.scss\" && cd ..",
     "lint:config": "schema validate -s config.schema.yml",
-    "lint:fix": "eslint *.[jt]s data lib models routes test views --fix && cd frontend && ng lint --fix && npx stylelint \"**/*.scss\" --fix && cd ..",
+    "lint:fix": "eslint *.[jt]s data lib models routes test views --fix && cd frontend && ./node_modules/@angular/cli/bin/ng lint --fix && npx stylelint \"**/*.scss\" --fix && cd ..",
     "package": "grunt package",
     "package:ci": "npm prune --production && npm dedupe && cd frontend && npm prune --production && cd .. && grunt package",
     "preprotractor": "npm dedupe && node ./node_modules/protractor/bin/webdriver-manager update --gecko false",
     "protractor": "npm run e2e",
-    "serve": "concurrently --kill-others \"ts-node app.ts\" \"cd frontend && ng serve\"",
+    "serve": "concurrently --kill-others \"ts-node app.ts\" \"cd frontend && ./node_modules/@angular/cli/bin/ng serve\"",
     "start": "node build/app",
-    "test": "cd frontend && ng test --watch=false --source-map=true && cd .. && npm run test:server",
-    "test:chromium": "cd frontend && ng test --watch=false --source-map=false --browsers=ChromiumHeadless && cd .. && npm run test:server",
+    "test": "cd frontend && ./node_modules/@angular/cli/bin/ng test --watch=false --source-map=true && cd .. && npm run test:server",
+    "test:chromium": "cd frontend && /node_modules/@angular/cli/bin/ng test --watch=false --source-map=false --browsers=ChromiumHeadless && cd .. && npm run test:server",
     "test:server": "nyc --report-dir=./build/reports/coverage/server-tests mocha -r ts-node/register -r source-map-support/register --recursive test/server/**/*.ts",
     "vagrant": "cd vagrant && vagrant up"
   },
